--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="firebaseui_title_text">FirebaseUI Auth</string>
 
     <string name="id_fmt">User ID: %s</string>
+    <string name="action_devtools">Develooper tools</string>
     <string name="email_fmt">Email: %s</string>
     <string name="sign_up">Sign Up</string>
 
@@ -114,4 +115,5 @@
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
     <string name="title_activity_test">testActivity</string>
+    <string name="title_activity_tabs">TabsActivity</string>
 </resources>
